zebra-rpc/src/methods/tests/snapshots/validate_address_invalid@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: validate_address
---
{
  "isvalid": false
}
