zebra-rpc/src/methods/tests/snapshots/z_get_subtrees_by_index_for_orchard@mainnet.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: subtrees
---
{
  "pool": "orchard",
  "start_index": 0,
  "subtrees": [
    {
      "root": "0000000000000000000000000000000000000000000000000000000000000000",
      "end_height": 0
    },
    {
      "root": "0000000000000000000000000000000000000000000000000000000000000000",
      "end_height": 1
    }
  ]
}
