zebra-rpc/src/methods/tests/snapshots/z_get_treestate_by_non_existent_hash@custom_testnet.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: rsp
---
{
  "Err": {
    "code": -8,
    "message": "the requested block was not found"
  }
}
