zebra-rpc/src/methods/tests/snapshots/z_get_treestate_excessive_block_height@custom_testnet.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: treestate
---
{
  "Err": {
    "code": -8,
    "message": "the requested block was not found"
  }
}
