zebra-rpc/src/methods/tests/snapshots/z_get_treestate_invalid_excessive_height@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: tree_state
---
{
  "Err": {
    "code": -8,
    "message": "the requested block was not found"
  }
}
